--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         function ListNode(val, next) {
-            this.val = (val===undefined ? 0 : val)
-            this.next = (next===undefined ? null : next)
+            this.val = (val === undefined ? 0 : val)
+            this.next = (next === undefined ? null : next)
         }
-        var mergeTwoLists = function(l1, l2) {
+        var mergeTwoLists = function (l1, l2) {
             // 虚拟头结点
             var dummy = new ListNode(-1), p = dummy;
             debugger;
@@ -38,14 +40,14 @@
             }
             return dummy.next;
         };
-        let l1 = [1,2,4], l2 = [1,3,4];
+        let l1 = [1, 2, 4], l2 = [1, 3, 4];
         class ListStack {
-            constructor (val) {
+            constructor(val) {
                 this.val = val
                 this.next = null
             }
             // 将数组转化为链表结构
-            static arrayToListNode (arr) {
+            static arrayToListNode(arr) {
                 if (arr.length === 0) return null
                 // 生成链表的根节点
                 // eslint-disable-next-line new-cap
@@ -64,6 +66,24 @@
             }
         }
         mergeTwoLists(ListStack.arrayToListNode(l1), ListStack.arrayToListNode(l2));
+
+        var length = 10;
+        function fn() {
+            return this.length + 1;
+        }
+        var obj = {
+            length: 5,
+            test1: function () {
+                return fn();
+            },
+        };
+        obj.test2 = fn;
+        //下面代码输出是什么
+        console.log(obj.test1());
+        console.log(fn() === obj.test2());
+
+
     </script>
 </body>
+
 </html>
